# Squall

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Vagrantfile  docker-compose.yaml  filebeat-kubernetes.yaml  kubectl-squall  logo.pxm  metricbeat-kubernetes.yaml  pyproject.toml  squall.yaml
.github/workflows/: codeql-analysis.yml
documentation/images/source/: dev_cluster_topologydrawio.drawio  squall_container.drawio  squall_kubernetes_overview.drawio  squall_logo.pxm
infastructure/: ansible.cfg  site.yml
infastructure/group_vars/: all
infastructure/inventory/: all
infastructure/playbooks/: deploy_squall_plugin.yaml  standard_node.yaml
infastructure/roles/docker/handlers/: main.yml
infastructure/roles/docker/tasks/: main.yml
infastructure/roles/kubernetes/tasks/: main.yml
infastructure/roles/kubernetes/templates/calico/3.15/: calico.yaml
infastructure/roles/kubernetes/templates/calico/3.9/: calico.yaml
infastructure/roles/kubernetes/vars/: main.yml
infastructure/vagrant/: Vagrantfile
squall_plugin/: benchmarks.py  squall.py  squall_api.py
squall_plugin/config/: v1.6.1-10-01-2020.json
src/: datastore.py  jobs.sqlite  logger.py  main.py  manage_tasks.py  test_nmap.py  utils.py
src/interfaces/: i_task.py
src/tasks/: find_cluster_members.py  node_port_scan.py  tcp_port_scan.py
src/tasks_disabled/: sample.py  sample3.py  udp_port_scan.py
